fix center alignment of index table headers
for some reason a lot of styling on the _providers.css.scss has been
duplicated. Example: the .stylish styling shows up twice. Not sure how
(or when) this happened, but it’s going to cause problems in the
future.

--- a/app/assets/stylesheets/supplybetter/pages/_providers.css.scss
+++ b/app/assets/stylesheets/supplybetter/pages/_providers.css.scss
@@ -36,6 +36,7 @@ transition: all 0.3s;  /* Simple transition for hover effect */
 .stylish th {
 background: #DFDFDF;  /* Darken header a bit */
 font-weight: bold;
+text-align: center;
 }
 
 .stylish td {
